Image Grid: Display using flexbox to prevent unintended spacing

--- a/widgets/image-grid/styles/default.less
+++ b/widgets/image-grid/styles/default.less
@@ -1,6 +1,9 @@
 @spacing: default;
 
 .sow-image-grid-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	padding-top: @spacing;
 	line-height: 0;
 	text-align:center;
@@ -8,10 +11,6 @@
 	.sow-image-grid-image {
 		padding: 0 @spacing @spacing @spacing;
 		display: inline-block;
-
-		> a {
-			display: inline-block;
-		}
 
 		img {
 			opacity: 0;
